2009-12-04  Andy Buckley  <andy@insectnation.org>

	* Providing Analysis::sqrtS() and Analysis::beams(), and making
	sure they're available by the time the init methods are called.

2009-12-02  Andy Buckley  <andy@insectnation.org>

	* Adding passing of first event sqrt(s) and beams to analysis handler.

	* Restructuring running to only use one HepMC input file (no-one
	was using multiple ones, right?) and to break down the Run class
	to cleanly separate the init and event loop phases. End of file is
	now neater.

2009-12-01  Andy Buckley  <andy@insectnation.org>

	* Adding parsing of beam types and pairs of energies from YAML.

2009-12-01  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing trigger efficiency in CDF_2009_S8233977

2009-11-30  Andy Buckley  <andy@insectnation.org>

	* Using shared pointers to make I/O object memory management
	neater and less error-prone.

	* Adding crossSectionPerEvent() method [==
	crossSection()/sumOfWeights()] to Analysis. Useful for histogram
	scaling since numerator of sumW_passed/sumW_total (to calculate
	pass-cuts xsec) is cancelled by dividing histo by sumW_passed.

	* Clean-up of Particle class and provision of inline PID::
	functions which take a Particle as an argument to avoid having to
	explicitly call the Particle::pdgId() method.

2009-11-30  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing division by zero in Profile1D bin errors for
	bins with just a single entry.

2009-11-24  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* First working version of STAR_2006_S6860818

2009-11-23  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding missing CDF_2001_S4751469 plots to uemerge
	* New "ShowZero" option in make-plots
	* Improving lots of plot defaults
	* Fixing typos / non-existing bins in CDF_2001_S4751469 and
	CDF_2004_S5839831 reference data

2009-11-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fixing our compare() for doubles.

2009-11-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>
