@@ -1,5 +1,16 @@
 2009-12-04  Andy Buckley  <andy@insectnation.org>
 
+	* Improved Hemispheres interface to remove unnecessary consts on
+	returned doubles, and to also return non-squared versions
+	of (scaled) hemisphere masses.
+
+	* Add "make pyclean" make target at the top level to make it
+	easier for developers to clean their Python module build when the
+	API is extended.
+
+	* Identify use of unvalidated analyses with a warning message at
+	runtime.
+
 	* Providing Analysis::sqrtS() and Analysis::beams(), and making
 	sure they're available by the time the init methods are called.
 
